// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders as a basic primary button group 1`] = `
<div
  className="ButtonGroup__Test__root ButtonGroup__Test---orientation-10-horizontal"
>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-7-primary Button__Test---vol-1-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-7-primary Button__Test---vol-1-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-7-primary Button__Test---vol-1-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders button group with all buttons disabled 1`] = `
<div
  className="ButtonGroup__Test__root ButtonGroup__Test---orientation-10-horizontal ButtonGroup__Test--isDisabled"
>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-3 Button__Test--isDisabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-3 Button__Test--isDisabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-3 Button__Test--isDisabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders buttons with additional class name 1`] = `
<div
  className="ButtonGroup__Test__root ButtonGroup__Test---orientation-10-horizontal"
>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-5 btn-group-btn-item-applied"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders buttons with correct style class if overridden 1`] = `
<div
  className="ButtonGroup__Test__root ButtonGroup__Test---orientation-10-horizontal"
>
  <button
    className="Button__Test__root Button__Test---tone-9-secondary Button__Test---variant-5-quiet Button__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-4-info Button__Test---variant-5-quiet Button__Test---vol-1-5 btn-group-btn-override"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-9-secondary Button__Test---variant-5-quiet Button__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders child buttons with style classes for #tone, #variant, #vol and #buttonClassName 1`] = `
<div
  className="ButtonGroup__Test__root ButtonGroup__Test---orientation-10-horizontal"
>
  <button
    className="Button__Test__root Button__Test---tone-6-danger Button__Test---variant-9-secondary Button__Test---vol-1-6"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-6-danger Button__Test---variant-9-secondary Button__Test---vol-1-6"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-6-danger Button__Test---variant-9-secondary Button__Test---vol-1-6"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders vertical button group 1`] = `
<div
  className="ButtonGroup__Test__root ButtonGroup__Test---orientation-8-vertical"
>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-1"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-1"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="Button__Test__root Button__Test---tone-1-1 Button__Test---variant-5-quiet Button__Test---vol-1-1"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="Button__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;
